--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ent-hooks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Promise-based events",
   "main": "lib/index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "module_git_repo"
+    "url": "https://github.com/entrinsik-org/hooks"
   },
   "author": "",
   "license": "MIT",
