--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "bluebird": "^2.9.13",
-    "ent-utils": "^1.0.0",
+    "cls-bluebird": "^2.0.0",
+    "ent-utils": "^4.3.0",
     "lodash": "^3.5.0"
   }
 }
