--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^2.1.1",
+    "chai": "^3.5.0",
+    "eslint": "~5.16.0",
     "gulp": "^3.8.11",
-    "gulp-bump": "^0.2.2",
+    "gulp-bump": "^3.1.1",
+    "gulp-eslint": "~5.0.0",
     "gulp-filter": "^2.0.2",
-    "gulp-git": "^1.1.0",
-    "gulp-istanbul": "^0.6.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-mocha": "^2.0.0",
+    "gulp-git": "^2.7.0",
+    "gulp-istanbul": "^1.1.1",
+    "gulp-load-plugins": "^2.0.0",
+    "gulp-mocha": "^6.0.0",
     "gulp-tag-version": "^1.2.1",
-    "jshint-stylish": "^1.0.1",
-    "mocha": "^2.2.1",
-    "sinon": "^1.13.0",
-    "sinon-chai": "^2.7.0"
+    "mocha": "^5.2.0",
+    "sinon": "^1.15.4",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "bluebird": "^2.9.13",
